// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardHeading when link is missing should render the heading without a link 1`] = `
.c2 {
  color: #0b0c0c;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.1111111111111112;
  display: block;
  margin-top: 0;
  margin-bottom: 15px;
}

.c4 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c4:link {
  color: #005ea5;
}

.c4:visited {
  color: #4c2c92;
}

.c4:hover {
  color: #2b8cc4;
}

.c4:active {
  color: #2b8cc4;
}

.c4:focus {
  color: #0b0c0c;
}

.c4:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
  background-color: #ffbf47;
}

.c1 {
  display: inline-block;
  font-weight: normal;
  color: white;
  padding: 2px 5px;
  background-color: #005ea5;
  margin-bottom: 10px;
}

.c0 {
  width: 100%;
}

.c3 {
  font-weight: normal;
  font-size: 24px;
  color: #005ea5;
}

.c3 > a:link,
.c3 a:visited,
.c3 a:hover,
.c3 a:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media print {
  .c2 {
    color: #000;
  }
}

@media print {
  .c2 {
    font-size: 18px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 24px;
    line-height: 1.25;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    margin-bottom: 20px;
  }
}

@media print {
  .c4 {
    font-family: sans-serif;
  }
}

@media print {
  .c4[href^="/"]::after,
  .c4[href^="http://"]::after,
  .c4[href^="https://"]::after {
    content: " (" attr(href) ")";
    font-size: 90%;
    word-wrap: break-word;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    margin-bottom: 30px;
  }
}

<div
  className="c0"
>
  <h3
    className="c1 c2"
    size="MEDIUM"
  >
    View block card heading
  </h3>
   
  <h3
    className="c3 c2"
    size="MEDIUM"
  >
    <a
      className="c4"
      href="#"
      muted={false}
    >
      Go to the detail page
    </a>
  </h3>
</div>
`;

exports[`CardHeading when sourceType is missing should render the default card heading 1`] = `
.c2 {
  color: #0b0c0c;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.1111111111111112;
  display: block;
  margin-top: 0;
  margin-bottom: 15px;
}

.c4 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c4:link {
  color: #005ea5;
}

.c4:visited {
  color: #4c2c92;
}

.c4:hover {
  color: #2b8cc4;
}

.c4:active {
  color: #2b8cc4;
}

.c4:focus {
  color: #0b0c0c;
}

.c4:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
  background-color: #ffbf47;
}

.c1 {
  display: inline-block;
  font-weight: normal;
  color: white;
  padding: 2px 5px;
  background-color: #005ea5;
  margin-bottom: 10px;
}

.c0 {
  width: 100%;
}

.c3 {
  font-weight: normal;
  font-size: 24px;
  color: #005ea5;
}

.c3 > a:link,
.c3 a:visited,
.c3 a:hover,
.c3 a:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media print {
  .c2 {
    color: #000;
  }
}

@media print {
  .c2 {
    font-size: 18px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 24px;
    line-height: 1.25;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    margin-bottom: 20px;
  }
}

@media print {
  .c4 {
    font-family: sans-serif;
  }
}

@media print {
  .c4[href^="/"]::after,
  .c4[href^="http://"]::after,
  .c4[href^="https://"]::after {
    content: " (" attr(href) ")";
    font-size: 90%;
    word-wrap: break-word;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    margin-bottom: 30px;
  }
}

<div
  className="c0"
>
  <h3
    className="c1 c2"
    size="MEDIUM"
  >
    View block card heading
  </h3>
   
  <h3
    className="c3 c2"
    size="MEDIUM"
  >
    <a
      className="c4"
      href="#"
      muted={false}
    >
      Go to the detail page
    </a>
  </h3>
</div>
`;

exports[`CardHeading when the all data items are passed should render the card heading 1`] = `
.c2 {
  color: #0b0c0c;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.1111111111111112;
  display: block;
  margin-top: 0;
  margin-bottom: 15px;
}

.c6 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c6:link {
  color: #005ea5;
}

.c6:visited {
  color: #4c2c92;
}

.c6:hover {
  color: #2b8cc4;
}

.c6:active {
  color: #2b8cc4;
}

.c6:focus {
  color: #0b0c0c;
}

.c6:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
  background-color: #ffbf47;
}

.c1 {
  display: inline-block;
  font-weight: normal;
  color: white;
  padding: 2px 5px;
  background-color: #005ea5;
  margin-bottom: 10px;
}

.c0 {
  width: 100%;
}

.c5 {
  font-weight: normal;
  font-size: 24px;
  color: #005ea5;
}

.c5 > a:link,
.c5 a:visited,
.c5 a:hover,
.c5 a:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  font-weight: normal;
  font-size: 24px;
  color: #393939;
}

.c3 {
  font-weight: normal;
  font-size: 19px;
  margin-left: 5px;
  color: #6f777b;
}

@media print {
  .c2 {
    color: #000;
  }
}

@media print {
  .c2 {
    font-size: 18px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    font-size: 24px;
    line-height: 1.25;
  }
}

@media only screen and (min-width:641px) {
  .c2 {
    margin-bottom: 20px;
  }
}

@media print {
  .c6 {
    font-family: sans-serif;
  }
}

@media print {
  .c6[href^="/"]::after,
  .c6[href^="http://"]::after,
  .c6[href^="https://"]::after {
    content: " (" attr(href) ")";
    font-size: 90%;
    word-wrap: break-word;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    width: 0;
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
    flex-grow: 1;
  }
}

@media only screen and (min-width:641px) {
  .c5 {
    margin-bottom: 30px;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    margin-bottom: 30px;
  }
}

<div
  className="c0"
>
  <h3
    className="c1 c2"
    size="MEDIUM"
  >
    View block card heading
  </h3>
   
  <span
    className="c3"
  >
    View sub heading
  </span>
  <h3
    className="c4 c2"
    size="MEDIUM"
  >
    view summary
  </h3>
  <h3
    className="c5 c2"
    size="MEDIUM"
  >
    <a
      className="c6"
      href="#"
      muted={false}
    >
      Go to the detail page
    </a>
  </h3>
</div>
`;
